<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AnalyzeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/toggleLayoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/resize_btn"
        android:src="@drawable/ic_twotone_arrow_upward_24"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        tools:ignore="ImageContrastCheck" />

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleLayoutButton">

        <TextView
            android:id="@+id/analyzeNoCollection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_collections" />

        <!-- This scroll view can be at best the maps bottom size! -->
        <ScrollView
            android:id="@+id/analyzeScroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/analyzeProperties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown"
                    android:contentDescription="@string/select_collection"/>

                <LinearLayout
                    android:id="@+id/analyzeProgressContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/analyzeProgress"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminate="true" />

                    <TextView
                        android:id="@+id/analyzeProgressDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loading"
                        android:textAlignment="center"
                        android:textStyle="italic" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/analyzeDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

                <Switch
                    android:id="@+id/mapShowSegmentMarkers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/show_locations" />

                <Switch
                    android:id="@+id/mapShowIntermediateMarkers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/show_estimations" />

                <Switch
                    android:id="@+id/analysisUseAccelerometer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/use_accel" />

                <Switch
                    android:id="@+id/analysisUseGeocoding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_geocode" />

                <Switch
                    android:id="@+id/analysisUseColorRules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/use_color_rules" />

                <Button
                    android:id="@+id/triggerAnalysisNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_changes" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>