<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CollectFragment">

    <ScrollView
        android:id="@+id/collectorAlign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="128pt">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:singleLine="true"
                        android:text="@string/collector_status" />

                    <TextView
                        android:id="@+id/collectorStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/collector_uptime" />

                    <TextView
                        android:id="@+id/collectorUptime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/collection_id" />

                    <TextView
                        android:id="@+id/collectionId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/location" />

                    <TextView
                        android:id="@+id/collectorLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/location_time" />

                    <TextView
                        android:id="@+id/collectorLocTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/location_accuracy" />

                    <TextView
                        android:id="@+id/collectorLocAccu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/location_direction" />

                    <TextView
                        android:id="@+id/collectorLocDir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/accelerometer" />

                    <TextView
                        android:id="@+id/collectorAccel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/magnetometer" />

                    <TextView
                        android:id="@+id/collectorMag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/gravity" />

                    <TextView
                        android:id="@+id/collectorGrav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/temperature" />

                    <TextView
                        android:id="@+id/collectorTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/collectorPress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/humidity" />

                    <TextView
                        android:id="@+id/collectorHumi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        tools:ignore="RtlSymmetry"
                        android:text="@string/remaining_space" />

                    <TextView
                        android:id="@+id/freeSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading" />
                </TableRow>

            </TableLayout>

            <ProgressBar
                android:id="@+id/serviceProgressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/keepActiveWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/collectorAlign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:scaleType="matrix"
                android:src="@drawable/ic_twotone_warning_24"
                android:contentDescription="@string/warning_icon_description"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_behavior_during_use" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>